--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "Raphaël Mailhiot",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "globals": "^16.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10"
   }
