--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -61,12 +61,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Push images
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/log430-labo:${{ github.sha }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/log430-labo:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/log430-labo:${{ github.sha }}
+            ${{ secrets.DOCKER_USERNAME }}/log430-labo:latest
