--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
   "name": "log430-labo",
+  "author": "Raphaël Mailhiot",
   "version": "1.0.0",
   "description": "Projet pour le labo du cours de LOG430",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "test": "jest",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
-  "author": "Raphaël Mailhiot",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/express": "^5.0.2",
+    "@types/inquirer": "^9.0.8",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.19",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "inquirer": "^12.6.1",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.24"
   }
 }
