--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@types/inquirer": "^9.0.8",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.19",
-    "eslint": "^9.26.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^16.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
