--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "description": "Projet pour le labo du cours de LOG430",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r src/views/* dist/views/",
+    "build:css": "tailwindcss -i ./public/input.css -o ./public/output.css",
+    "build:all": "npm run build && npm run build:css",
     "start": "node dist/index.js",
+    "start:web": "node dist/server.js",
     "dev": "nodemon dist/index.js",
+    "dev:web": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/server.js\"",
     "test": "jest",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
@@ -23,21 +27,29 @@
     "@types/terminal-kit": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
     "globals": "^16.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.8",
     "better-sqlite3": "^11.10.0",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "flowbite": "^3.1.2",
     "inquirer": "^12.6.2",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "terminal-kit": "^3.1.2",
