--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "author": "Raphaël Mailhiot",
   "version": "1.0.0",
   "description": "Projet pour le labo du cours de LOG430",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "tsc && cp -r src/views/* dist/views/",
     "build:css": "tailwindcss -i ./public/input.css -o ./public/output.css",
-    "build:all": "npm run build && npm run build:css",
-    "start": "node dist/index.js",
-    "start:web": "node dist/server.js",
-    "dev": "nodemon dist/index.js",
-    "dev:web": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/server.js\"",
+    "build:css:docker": "cd /LOG430-labo && npx tailwindcss -i ./public/input.css -o ./public/output.css",
+    "start": "node dist/server.js",
+    "dev": "nodemon dist/server.js",
+    "dev:web": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/server.js && npm run build:css\"",
+    "dev:web:docker": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/server.js && npm run build:css:docker\"",
     "test": "jest",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
