--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:15-alpine
     restart: always
     environment:
-      POSTGRES_USER: labuser
-      POSTGRES_PASSWORD: labpassword
-      POSTGRES_DB: labdb
-    ports:
-      - '5432:5432'
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - pgdata:/var/lib/postgresql/data
 
   app:
+    # On build l'image à partir du Dockerfile local
     build:
       context: .
       dockerfile: Dockerfile
@@ -21,10 +22,12 @@ services:
       - "3000:3000"
     env_file:
       - .env
+    # Monte votre code et préserve node_modules installé dans l'image
     volumes:
       - ./:/LOG430-labo
       - /LOG430-labo/node_modules
-    command: sh -c "npm run build:css -- --watch & npm run dev:web"
+    # Ici on enchaîne build TS, build CSS et lancement dev
+    command: sh -c "npm run dev:web:docker"
     depends_on:
       - db
 
