--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^5.0.2",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^22.15.19",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
@@ -44,6 +45,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "flowbite": "^3.1.2",
+    "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.24"
