--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
-    "@types/express": "^5.0.2",
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
     "@types/json2csv": "^5.0.7",
