--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,27 @@ jobs:
     name: 🧪 Tests unitaires
     runs-on: ubuntu-latest
     needs: lint
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USER: user
+      DB_PASSWORD: password
+      DB_NAME: db
+      PORT: 3000
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,6 +56,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Wait for PostgreSQL
+        run: sleep 10
 
       - name: Run Jest
         run: npm test
