--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/jest": "^29.5.14",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^22.15.19",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "autoprefixer": "^10.4.21",
@@ -49,6 +51,8 @@
     "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24"
   }
 }
