--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "author": "Raphaël Mailhiot",
   "version": "1.0.0",
   "description": "Projet pour le labo du cours de LOG430",
-  "main": "server.js",
+  "main": "dist/start.js",
   "scripts": {
     "build": "tsc && mkdir -p dist/views && cp -r src/views/* dist/views/",
     "build:css": "tailwindcss -i ./public/input.css -o ./public/output.css",
     "build:css:docker": "cd /LOG430-labo && npx tailwindcss -i ./public/input.css -o ./public/output.css",
-    "start": "node dist/server.js",
-    "dev": "nodemon dist/server.js",
-    "dev:web": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/server.js && npm run build:css\"",
-    "dev:web:docker": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/server.js && npm run build:css:docker\"",
-    "test": "jest",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+    "start": "node dist/start.js",
+    "dev": "nodemon dist/start.js",
+    "dev:web": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/start.js && npm run build:css\"",
+    "dev:web:docker": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/start.js && npm run build:css:docker\"",
+    "test": "jest"
   },
   "keywords": [],
   "license": "ISC",
@@ -26,6 +25,7 @@
     "@types/jest": "^29.5.14",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^22.15.19",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
@@ -37,6 +37,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
+    "supertest": "^7.1.1",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
