--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,7 @@ jobs:
     name: 🧪 Tests unitaires
     runs-on: ubuntu-latest
     needs: lint
+
     services:
       postgres:
         image: postgres:15
@@ -36,10 +37,11 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U user -d db"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
     env:
       DB_HOST: localhost
       DB_PORT: 5432
@@ -47,21 +49,28 @@ jobs:
       DB_PASSWORD: password
       DB_NAME: db
       PORT: 3000
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Installer les dépendances
         run: npm ci
 
-      - name: Build project
+      - name: Build du projet
         run: npm run build
 
-      - name: Wait for PostgreSQL
-        run: sleep 10
+      - name: Attendre que PostgreSQL soit prêt
+        run: |
+          until pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER -d $DB_NAME; do
+            echo "En attente de la BDD…"
+            sleep 2
+          done
 
-      - name: Run Jest
-        run: npm test
+      - name: Lancer les tests en série
+        # --runInBand empêche Jest de lancer plusieurs workers simultanément
+        run: npm test -- --runInBand --detectOpenHandles
+
 
   build:
     name: 🏗️ Build Docker
