--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "flowbite": "^3.1.2",
     "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.16.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "winston": "^3.17.0"
   }
 }
