--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - monitoring
 
   app:
-    # On build l'image à partir du Dockerfile local
     build:
       context: .
       dockerfile: Dockerfile
@@ -22,14 +23,90 @@ services:
       - "3000:3000"
     env_file:
       - .env
-    # Monte votre code et préserve node_modules installé dans l'image
     volumes:
       - ./:/LOG430-labo
-      - /LOG430-labo/node_modules
-    # Ici on enchaîne build TS, build CSS et lancement dev
+      - node_modules:/LOG430-labo/node_modules
     command: sh -c "npm run dev:web:docker"
     depends_on:
       - db
+    networks:
+      - monitoring
+
+  app1:
+    image: log430-labo:latest
+    env_file:
+      - .env
+    volumes:
+      - ./:/LOG430-labo
+      - node_modules:/LOG430-labo/node_modules
+    command: sh -c "npm run dev:web:docker"
+    depends_on:
+      - db
+    networks:
+      - monitoring
+
+  app2:
+    image: log430-labo:latest
+    env_file:
+      - .env
+    volumes:
+      - ./:/LOG430-labo
+      - node_modules:/LOG430-labo/node_modules
+    command: sh -c "npm run dev:web:docker"
+    depends_on:
+      - db
+    networks:
+      - monitoring
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    restart: always
+    networks:
+      - monitoring
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
+    restart: always
+    networks:
+      - monitoring
+
+  nodeexporter:
+    image: prom/node-exporter
+    container_name: nodeexporter
+    ports:
+      - "9100:9100"
+    networks:
+      - monitoring
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app1
+      - app2
+      # Ajoute autant d'apps que tu veux
+    networks:
+      - monitoring
 
 volumes:
   pgdata:
+  node_modules:
+
+networks:
+  monitoring:
+    driver: bridge
