--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,18 @@
 events {}
+
 http {
-  upstream api_backend {
-    server app1:3000;
-    server app2:3000;
-  }
   server {
-    listen 80;
+    listen 8080;
+
     location / {
-      proxy_pass http://api_backend;
+      return 200 'NGINX is running\n';
+      add_header Content-Type text/plain;
+    }
+
+    location /nginx_status {
+      stub_status;
+      allow all;
+      deny all;
     }
   }
 }
