--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+
+  initdata:
+    image: log430-labo:latest
+    env_file:
+      - .env
+    command: sh -c "npx ts-node src/initDataRunner.ts"
+    depends_on:
+      - db
+    networks:
+      - monitoring
+  migrate:
+    image: log430-labo:latest
+    env_file:
+      - .env
+    command: sh -c "npx typeorm migration:run"
+    depends_on:
+      - db
+    networks:
+      - monitoring
   db:
     image: postgres:15-alpine
     restart: always
@@ -93,13 +112,41 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "8080:80"
+      - "8080:8080"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app1
       - app2
       # Ajoute autant d'apps que tu veux
+    networks:
+      - monitoring
+
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter:latest
+    command:
+      - '--nginx.scrape-uri=http://nginx:8080/nginx_status'
+    ports:
+      - "9113:9113"
+    depends_on:
+      - nginx
+    networks:
+      - monitoring
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - monitoring
+
+  redis-exporter:
+    image: oliver006/redis_exporter:latest
+    ports:
+      - "9121:9121"
+    command: --redis.addr=redis:6379
+    depends_on:
+      - redis
     networks:
       - monitoring
 
