--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "flowbite": "^3.1.2",
+    "ioredis": "^5.6.1",
     "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.16.0",
     "prom-client": "^15.1.3",
