--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,10 +6,6 @@ scrape_configs:
     static_configs:
       - targets: ['nodeexporter:9100']
 
-  - job_name: 'app'
+  - job_name: 'nginx'
     static_configs:
-      - targets: ['log430-labo-app:3000']
-
-  - job_name: 'loadbalancer'
-    static_configs:
-      - targets: ['log430-labo-nginx:80']
+      - targets: ['nginx-exporter:9113']
