--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,11 +1,36 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'node'
+  - job_name: 'app'
+    static_configs:
+      - targets: [ 'app:3000' ]
+        labels:
+          service: 'metrics'
+
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+        labels:
+          service: 'prometheus'
+
+  - job_name: 'node_exporter'
     static_configs:
       - targets: ['nodeexporter:9100']
+        labels:
+          service: 'node'
+          instance: 'main-node'
 
-  - job_name: 'nginx'
+  - job_name: 'nginx_exporter'
     static_configs:
       - targets: ['nginx-exporter:9113']
+        labels:
+          service: 'nginx'
+
+  - job_name: 'redis_exporter'
+    static_configs:
+      - targets: ['redis-exporter:9121']
+        labels:
+          service: 'redis'
+          instance: 'primary'
