--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,7 +146,7 @@ services:
   grafana:
     image: grafana/grafana
     ports:
-      - "3005:3000"
+      - "3006:3000"
     volumes:
       - grafana_data:/var/lib/grafana
     networks:
@@ -164,8 +164,10 @@ services:
 
 volumes:
   auth_pgdata:
+  inventory_pgdata:
   products_pgdata:
   sales_pgdata:
+  store_pgdata:
   pgdata:
   grafana_data:
   node_modules:
