--- a/src/services/inventory/Dockerfile
+++ b/src/services/inventory/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:22-alpine
 
 # Crée le dossier de l'app
-WORKDIR /auth-service
+WORKDIR /inventory-service
 
 # Copie les fichiers de dépendances
 COPY package*.json ./
