--- a/src/services/inventory/package.json
+++ b/src/services/inventory/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "auth-service",
+  "name": "inventory-service",
   "author": "Raphaël Mailhiot",
   "version": "1.0.0",
-  "description": "Service auth for LOG430",
+  "description": "Service inventory for LOG430",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -21,6 +21,8 @@
     "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.19",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
@@ -34,6 +36,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
