--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   # AUTH SERVICE
-  auth:
+  auth-service:
     build: ./src/services/auth
     env_file: ./src/services/auth/.env
     ports:
@@ -22,7 +22,7 @@ services:
       - microservices
 
   # INVENTORY SERVICE
-  inventory:
+  inventory-service:
     build: ./src/services/inventory
     env_file: ./src/services/inventory/.env
     ports:
@@ -44,7 +44,7 @@ services:
       - microservices
 
   # PRODUCTS SERVICE
-  products:
+  products-service:
     build: ./src/services/products
     env_file: ./src/services/products/.env
     ports:
@@ -66,7 +66,7 @@ services:
       - microservices
 
   # SALES SERVICE
-  sales:
+  sales-service:
     build: ./src/services/sales
     env_file: ./src/services/sales/.env
     ports:
@@ -88,7 +88,7 @@ services:
       - microservices
 
   # STORE SERVICE
-  store:
+  store-service:
     build: ./src/services/store
     env_file: ./src/services/store/.env
     ports:
@@ -114,10 +114,10 @@ services:
     image: kong:3.4
     environment:
       KONG_DATABASE: "off"
-      KONG_DECLARATIVE_CONFIG: /kong/kong.yml
+      KONG_DECLARATIVE_CONFIG: /kong.yml
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
     volumes:
-      - ./kong/kong.yml:/kong/kong.yml
+      - ./kong.yml:/kong.yml
     ports:
       - "8000:8000"  # Public (proxy)
       - "8001:8001"  # Admin
@@ -136,7 +136,7 @@ services:
   prometheus:
     image: prom/prometheus
     volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus.yml:/etc/prometheus.yml
     ports:
       - "9090:9090"
     networks:
@@ -158,7 +158,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - microservices
 
