--- a/nginx.conf
+++ b/nginx.conf
@@ -2,13 +2,29 @@ events {}
 
 http {
   server {
-    listen 8080;
+    listen 80;
 
-    location / {
-      return 200 'NGINX is running\n';
-      add_header Content-Type text/plain;
+    # Proxy les requêtes vers la doc API
+    location ~ ^/(auth|inventory|products|sales|store)(/|$) {
+      proxy_pass http://kong:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # Proxy les requêtes API vers Kong
+    location /api/ {
+      proxy_pass http://kong:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Sert les fichiers statiques
+    location / {
+      root /usr/share/nginx/html;
+      try_files $uri $uri/ =404;
+    }
+
+    # Status NGINX
     location /nginx_status {
       stub_status;
       allow all;
