Update inventory service API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - inventory-db
     networks:
       - microservices
-    #command: sh -c "npm run migration:run && npm run seed && npm run dev"
+    command: sh -c "npm run migration:run && npm run seed && npm run dev"
 
   inventory-db:
     image: postgres:15-alpine
