--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "description": "Projet pour le labo du cours de LOG430",
   "main": "dist/start.js",
   "scripts": {
-    "build": "tsc && mkdir -p dist/views && cp -r src/views/* dist/views/",
+    "build": "tsc",
     "build:css": "tailwindcss -i ./public/input.css -o ./public/output.css",
-    "build:css:docker": "cd /LOG430-labo && npx tailwindcss -i ./public/input.css -o ./public/output.css",
+    "build:css:docker": "npx tailwindcss -i ./public/input.css -o ./public/output.css",
     "start": "node dist/start.js",
-    "dev": "nodemon dist/start.js",
-    "dev:web": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/start.js && npm run build:css\"",
-    "dev:web:docker": "nodemon --watch src --ext ts,ejs --exec \"npm run build && node dist/start.js && npm run build:css:docker\"",
+    "start:dev": "nodemon dist/start.js",
+    "dev": "npm run build && npm run build:css && nodemon dist/start.js",
+    "dev:watch": "nodemon --watch src --ext ts,ejs --exec \"npm run build && npm run build:css && node dist/start.js\"",
+    "dev:docker": "npm run build:css:docker && nodemon dist/start.js",
     "test": "jest",
     "load-test": "npx artillery run load-test.yml -o report.json && npx artillery report --output report.html report.json"
   },
