--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,12 @@
   "description": "Projet pour le labo du cours de LOG430",
   "main": "dist/start.js",
   "scripts": {
-    "build": "tsc",
-    "build:css": "tailwindcss -i ./public/input.css -o ./public/output.css",
-    "build:css:docker": "npx tailwindcss -i ./public/input.css -o ./public/output.css",
     "start": "node dist/start.js",
-    "start:dev": "nodemon dist/start.js",
-    "dev": "npm run build && npm run build:css && nodemon dist/start.js",
-    "dev:watch": "nodemon --watch src --ext ts,ejs --exec \"npm run build && npm run build:css && node dist/start.js\"",
-    "dev:docker": "npm run build:css:docker && nodemon dist/start.js",
+    "dev": "nodemon src/start.ts",
+    "build": "tsc && copyfiles -u 1 src/views/**/* dist/views && npm run build:css",
+    "lint": "eslint . --ext .ts",
     "test": "jest",
+    "build:css": "tailwindcss -i ./public/input.css -o ./public/output.css",
     "load-test": "npx artillery run load-test.yml -o report.json && npx artillery report --output report.html report.json"
   },
   "keywords": [],
@@ -35,6 +32,7 @@
     "@typescript-eslint/parser": "^8.32.1",
     "artillery": "^2.0.23",
     "autoprefixer": "^10.4.21",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
