--- a/nginx.conf
+++ b/nginx.conf
@@ -18,10 +18,11 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # Sert les fichiers statiques
+    # Sert le frontend
     location / {
-      root /usr/share/nginx/html;
-      try_files $uri $uri/ =404;
+      proxy_pass http://frontend:3000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
     }
 
     # Status NGINX
