--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -245,6 +245,8 @@ services:
       - ./frontend/dist:/usr/share/nginx/html
     networks:
       - microservices
+    depends_on:
+      - frontend
 
 volumes:
   frontend:
