--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /auth-service
 COPY package*.json ./
 
 # Installe les dépendances
-RUN npm install
+RUN npm ci
 
 # Copie le reste du code source
 COPY . .
