--- a/services/inventory/Dockerfile
+++ b/services/inventory/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /inventory-service
 COPY package*.json ./
 
 # Installe les dépendances
-RUN npm install
+RUN npm ci
 
 # Copie le reste du code source
 COPY . .
