--- a/services/store/package.json
+++ b/services/store/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "auth-service",
+  "name": "store-service",
   "author": "Raphaël Mailhiot",
   "version": "1.0.0",
-  "description": "Service auth for LOG430",
+  "description": "Service store for LOG430",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
