--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,13 @@ http {
   server {
     listen 80;
 
+    # Proxy les requêtes api-docs vers Kong
+    location ~ ^/(auth|inventory|products|sales|store)/api-docs {
+      proxy_pass http://kong:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+
     # Proxy les requêtes vers la doc API
     location ~ ^/(auth|inventory|products|sales|store)(/|$) {
       proxy_pass http://kong:8000;
