--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -232,6 +232,7 @@ services:
       - "3006:3000"
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
     networks:
       - microservices
 
