--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci-cd.yml
 name: CI/CD
 
 on:
@@ -12,21 +11,28 @@ jobs:
   lint:
     name: 🔍 Lint
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [frontend, auth, inventory, products, sales, store]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ${{ matrix.service == 'frontend' && 'frontend' || format('services/{0}', matrix.service) }}
 
       - name: ESLint
         run: npx eslint "src/**/*.{js,jsx,ts,tsx}"
-  
+        working-directory: ${{ matrix.service == 'frontend' && 'frontend' || format('services/{0}', matrix.service) }}
+
   test:
     name: 🧪 Tests unitaires
     runs-on: ubuntu-latest
     needs: lint
-
+    strategy:
+      matrix:
+        service: [auth, inventory, products, sales, store]
     services:
       postgres:
         image: postgres:15
@@ -45,7 +51,6 @@ jobs:
         image: redis
         ports:
           - 6379:6379
-
     env:
       NODE_ENV: test
       DB_HOST: localhost
@@ -54,16 +59,17 @@ jobs:
       DB_PASSWORD: password
       DB_NAME: db
       PORT: 3000
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Installer les dépendances
         run: npm ci
+        working-directory: services/${{ matrix.service }}
 
       - name: Build du projet
         run: npm run build
+        working-directory: services/${{ matrix.service }}
 
       - name: Attendre que PostgreSQL soit prêt
         run: |
@@ -73,14 +79,16 @@ jobs:
           done
 
       - name: Lancer les tests en série
-        # --runInBand empêche Jest de lancer plusieurs workers simultanément
         run: npm test -- --runInBand --detectOpenHandles
-
+        working-directory: services/${{ matrix.service }}
 
   build:
     name: 🏗️ Build Docker
     runs-on: ubuntu-latest
     needs: test
+    strategy:
+      matrix:
+        service: [frontend, auth, inventory, products, sales, store]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -88,15 +96,18 @@ jobs:
       - name: Build image
         run: |
           docker build \
-            --file Dockerfile \
-            --tag ${{ secrets.DOCKER_USERNAME }}/log430-labo:${{ github.sha }} \
-            --tag ${{ secrets.DOCKER_USERNAME }}/log430-labo:latest \
-            .
+            --file ${{ matrix.service == 'frontend' && 'frontend/Dockerfile' || format('services/{0}/Dockerfile', matrix.service) }} \
+            --tag ${{ secrets.DOCKER_USERNAME }}/log430-labo-${{ matrix.service }}:${{ github.sha }} \
+            --tag ${{ secrets.DOCKER_USERNAME }}/log430-labo-${{ matrix.service }}:latest \
+            ${{ matrix.service == 'frontend' && 'frontend' || format('services/{0}', matrix.service) }}
 
   publish:
     name: 🚀 Publish to Docker Hub
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      matrix:
+        service: [frontend, auth, inventory, products, sales, store]
     permissions:
       packages: write
       contents: read
@@ -112,26 +123,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: raphaelmailhiot/log430-labo
-
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
+          context: ${{ matrix.service == 'frontend' && 'frontend' || format('services/{0}', matrix.service) }}
+          file: ${{ matrix.service == 'frontend' && 'frontend/Dockerfile' || format('services/{0}/Dockerfile', matrix.service) }}
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/log430-labo:${{ github.sha }}
-            ${{ secrets.DOCKER_USERNAME }}/log430-labo:latest
+            ${{ secrets.DOCKER_USERNAME }}/log430-labo-${{ matrix.service }}:${{ github.sha }}
+            ${{ secrets.DOCKER_USERNAME }}/log430-labo-${{ matrix.service }}:latest
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
-          subject-name: index.docker.io/raphaelmailhiot/log430-labo
+          subject-name: index.docker.io/${{ secrets.DOCKER_USERNAME }}/log430-labo-${{ matrix.service }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
