--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,20 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # Proxy Prometheus
+    location /prometheus/ {
+      proxy_pass http://prometheus:9090/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Proxy Grafana
+    location /grafana/ {
+      proxy_pass http://grafana:3000/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+
     # Proxy les requêtes API vers Kong
     location /api/ {
       proxy_pass http://kong:8000;
