--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -217,7 +217,7 @@ services:
 
   # PROMETHEUS
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:latest
     volumes:
       - ./prometheus.yml:/etc/prometheus.yml
     ports:
@@ -227,12 +227,13 @@ services:
 
   # GRAFANA
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
     ports:
       - "3006:3000"
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./provisioning/datasources:/etc/grafana/provisioning/datasources
     networks:
       - microservices
 
