--- a/kong.yml
+++ b/kong.yml
@@ -147,3 +147,21 @@ services:
                 - Authorization
                 - Content-Type
               credentials: true
+
+  - name: grafana
+    host: grafana
+    port: 3000
+    routes:
+      - name: grafana-route
+        paths:
+          - /grafana
+        strip_path: false
+
+  - name: prometheus
+    host: prometheus
+    port: 9090
+    routes:
+      - name: prometheus-route
+        paths:
+          - /prometheus
+        strip_path: false
