--- a/services/sales/package.json
+++ b/services/sales/package.json
@@ -16,6 +16,7 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -39,6 +40,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
