--- a/nginx.conf
+++ b/nginx.conf
@@ -19,15 +19,16 @@ http {
     }
 
     # Proxy Prometheus
-    location /prometheus/ {
-      proxy_pass http://prometheus:9090/;
+    location ^~ /prometheus/ {
+      rewrite ^/prometheus/(.*)$ /$1 break;
+      proxy_pass http://kong:8000/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
     }
 
     # Proxy Grafana
-    location /grafana/ {
-      proxy_pass http://grafana:3000/;
+    location ^/grafana(/|$) {
+      proxy_pass http://kong:8000/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
     }
